added pages for individual pieces

--- a/glitch.html
+++ b/glitch.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <H1>test for this rq</H1>
+    <!--Header Code-->
+    <div class="header">
+        <img src="images/3dSkeleton.gif" alt="" style="width: 10%;">
+        
+        <img src="images/3dSkeleton.gif" alt="" style="width: 10%;">
+        <div class="nav">
+            <!--list that holds all links-->
+            <ul class="navbar">
+               <li>
+                <a href="index.html"><h1>HOME</h1></a>
+               </li>
+               <li>
+                <a href="index.html"><h1>HOME</h1></a>
+               </li>
+               <li>
+                <a href="index.html"><h1>HOME</h1></a>
+               </li>
+            </ul>
+        </div>
+    </div>
     <div class="body">
         <div class="grid">
             <div class="layer1">
