--- a/index.html
+++ b/index.html
@@ -32,14 +32,21 @@
         <h1>Artwork</h1>
         <!--Image Code-->
         <div class="grid">
-            <img src="images/glitch.png" alt="Glitch art">
-            <div class="text">
-                <p>TEst stuff</p>
+            <div class="img1">
+                <a href="glitch.html"><img src="images/glitch.png" alt="Glitch art"></a>
             </div>
-            <img src="images/logo.png" alt="fake logo">
-            <img src="images/Kalego.png" alt="3d model">
-            <iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="0"></iframe>
-            <img src="images/Skull.png" alt="3d print">
+            <div class="img2">
+                <a href="logo.html"><img src="images/logo.png" alt="fake logo"></a>
+            </div>
+            <div class="img3">
+                <img src="images/Kalego.png" alt="3d model">
+            </div>
+            <div class="img4">
+                <iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="0"></iframe>
+            </div>
+            <div class="img5">
+                <img src="images/Skull.png" alt="3d print">
+            </div>
         </div>
     </div>
 </body>
