--- a/glitch.html
+++ b/glitch.html
@@ -28,13 +28,14 @@
         </div>
     </div>
     <div class="body">
-        <div class="grid">
-            <div class="layer1">
-                <img src="images/3dSkeleton.gif" alt="">
-            </div>
-            <div class="layer2">
-                <img src="images/glitch.png" alt="">
-            </div>
+        <div class="bigimg">
+            <img src="images/glitch.png" alt="glitch art">
+        </div>
+        <div class="text">
+            <h1>In this piece I opened all of the components
+            in a text editor and messed with the code. This created interesting effects.
+            I then opened it in Photoshop and edited them together. My intention behind this was to create a sort of 
+            collage.</h1>
         </div>
     </div>
 </body>
