--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <a href="logo.html"><img src="images/logo.png" alt="fake logo"></a>
             </div>
             <div class="img3">
-                <img src="images/Kalego.png" alt="3d model">
+                <a href="3dmodel.html"><img src="images/Kalego.png" alt="3d model"></a>
             </div>
             <div class="img4">
-                <iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="0"></iframe>
+                <a href="html.html"><iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="100px"></iframe></a>
             </div>
             <div class="img5">
-                <img src="images/Skull.png" alt="3d print">
+                <a href="3dprinting.html"><img src="images/Skull.png" alt="3d print"></a>
             </div>
         </div>
     </div>
