--- a/index.html
+++ b/index.html
@@ -19,7 +19,42 @@
                 <a href="index.html"><h1>HOME</h1></a>
                </li>
                <li>
-                <a href="index.html"><h1>HOME</h1></a>
+                <a href="index.html">
+                    <div class="dropdown">
+                        <button class="drop">
+                            <h1>ART</h1>
+                        </button>
+                        <div class="dropdowncontent">
+                            <ul>
+                                <li>
+                                    <a href="glitch.html">
+                                        <h1>GLITCH</h1>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="logo.html">
+                                        <h1>LOGO</h1>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="3dmodel.html">
+                                        <H1>3D MODEL</H1>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="html.html">
+                                        <h1>NET ART</h1>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="3dprinting.html">
+                                        <h1>3D PRINTING</h1>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </a>
                </li>
                <li>
                 <a href="index.html"><h1>HOME</h1></a>
