--- a/art.html
+++ b/art.html
@@ -62,9 +62,26 @@
             </ul>
         </div>
     </div>
+
     <div class="body">
-        <div class="bigimg">
-            <img src="images/Kalego.png" alt="3d Model">
+        <h1>Artwork</h1>
+        <!--Image Code-->
+        <div class="grid">
+            <div class="img1">
+                <a href="glitch.html"><img src="images/glitch.png" alt="Glitch art"></a>
+            </div>
+            <div class="img2">
+                <a href="logo.html"><img src="images/logo.png" alt="fake logo"></a>
+            </div>
+            <div class="img3">
+                <a href="3dmodel.html"><img src="images/Kalego.png" alt="3d model"></a>
+            </div>
+            <div class="img4">
+                <a href="html.html"><iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="100px"></iframe></a>
+            </div>
+            <div class="img5">
+                <a href="3dprinting.html"><img src="images/Skull.png" alt="3d print"></a>
+            </div>
         </div>
     </div>
 </body>
