--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="index.html"><h1>HOME</h1></a>
                </li>
                <li>
-                <a href="index.html">
+                <a href="art.html">
                     <div class="dropdown">
                         <button class="drop">
                             <h1>ART</h1>
@@ -64,24 +64,11 @@
     </div>
     <!--Body Code-->
     <div class="body">
-        <h1>Artwork</h1>
-        <!--Image Code-->
-        <div class="grid">
-            <div class="img1">
-                <a href="glitch.html"><img src="images/glitch.png" alt="Glitch art"></a>
-            </div>
-            <div class="img2">
-                <a href="logo.html"><img src="images/logo.png" alt="fake logo"></a>
-            </div>
-            <div class="img3">
-                <a href="3dmodel.html"><img src="images/Kalego.png" alt="3d model"></a>
-            </div>
-            <div class="img4">
-                <a href="html.html"><iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="100px"></iframe></a>
-            </div>
-            <div class="img5">
-                <a href="3dprinting.html"><img src="images/Skull.png" alt="3d print"></a>
-            </div>
+        <div class="homepage">
+            <img src="images/me.png" alt="me frfr" class="me">
+            <img src="images/conan.gif" alt="conan"class="conan">
+            <img src="images/kaitokid.gif" alt="kaito" class="kaito">
+            <img src="images/kaito.gif" alt="kaitokid" class="katiokid">
         </div>
     </div>
 </body>
