--- a/3dmodel.html
+++ b/3dmodel.html
@@ -66,6 +66,9 @@
         <div class="bigimg">
             <img src="images/Kalego.png" alt="3d Model">
         </div>
+        <div class="text">
+            <h1>I created a low poly model of an character from a show that I really enjoy.</h1>
+        </div>
     </div>
 </body>
 </html>
