--- a/3dprinting.html
+++ b/3dprinting.html
@@ -66,6 +66,9 @@
         <div class="bigimg">
             <img src="images/Skull.png" alt="">
         </div>
+        <div class="text">
+            <h1>I modeled a low poly rat skull in blender and then 3d printed it. I was trying to convey the feeling of<h1 style="color: crimson; background:black;">DEATH</h1></h1> 
+        </div>
     </div>
 </body>
 </html>
