--- a/art.html
+++ b/art.html
@@ -77,7 +77,7 @@
                 <a href="3dmodel.html"><img src="images/Kalego.png" alt="3d model"></a>
             </div>
             <div class="img4">
-                <a href="html.html"><iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="100px"></iframe></a>
+                <a href="html.html"><img src="images/html.png" alt="coding"></a>
             </div>
             <div class="img5">
                 <a href="3dprinting.html"><img src="images/Skull.png" alt="3d print"></a>
