--- a/html.html
+++ b/html.html
@@ -66,6 +66,9 @@
         <div class="bigiframe">
             <iframe src="https://cr0wbelle.github.io/belle_alvarez_art74/" frameborder="10" style="width: 100%; height: 900px;"></iframe>
         </div>
+        <div class="text">
+            <h1>For this project I used html and css to create a sort of adventure style game were the viewer traverses through a forest in order to find treasure. :]</h1>
+        </div>
     </div>
 </body>
 </html>
