--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         </div>
     </div>
     <!--Body Code-->
+    <!--<img src="images/conan.gif" alt="conan"class="conan">
+    <img src="images/kaitokid.gif" alt="kaito" class="kaito">
+    <img src="images/kaito.gif" alt="kaitokid" class="katiokid">-->
     <div class="body">
         <div class="homepage">
             <img src="images/me.png" alt="me frfr" class="me">
-            <img src="images/conan.gif" alt="conan"class="conan">
-            <img src="images/kaitokid.gif" alt="kaito" class="kaito">
-            <img src="images/kaito.gif" alt="kaitokid" class="katiokid">
         </div>
     </div>
 </body>
