--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
         </div>
     </div>
     <!--Body Code-->
-    <!--<img src="images/conan.gif" alt="conan"class="conan">
-    <img src="images/kaitokid.gif" alt="kaito" class="kaito">
+    <!--
     <img src="images/kaito.gif" alt="kaitokid" class="katiokid">-->
     <div class="body">
         <div class="homepage">
             <img src="images/me.png" alt="me frfr" class="me">
+            <div class="text">
+                <h1><img src="images/conan.gif" alt="conan"class="conan">Hello Welcome to my portfolio! &#128540;<img src="images/kaitokid.gif" alt="kaito" class="kaito"></h1>
+            </div>
         </div>
     </div>
 </body>
