--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="homepage">
             <img src="images/me.png" alt="me frfr" class="me">
             <div class="text">
-                <h1><img src="images/conan.gif" alt="conan"class="conan">Hello Welcome to my portfolio! &#128540;<img src="images/kaitokid.gif" alt="kaito" class="kaito"></h1>
+                <h1><img src="images/conan.gif" alt="conan"class="conan">Hello Welcome to my portfolio!<img src="images/kaitokid.gif" alt="kaito" class="kaito"><br>     I do art  &#128540;</h1>
             </div>
         </div>
     </div>
